--- a/public/dom/index.html
+++ b/public/dom/index.html
@@ -1,1 +1,62 @@
-DOM on Vercel!
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <title>Ejercicio 2 - Client-Side JavaScript</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="clientSideDataProcessing.js"></script>
+    <!--<link href="../../style.css" rel="stylesheet" />-->
+</head>
+<body>
+<nav class="bg-[#5F6F52]">
+    <div class="flex justify-between items-center p-4">
+        <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse p-4">
+            <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">IAW</span>
+        </a>
+        <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false" onclick="button()">
+            <span class="sr-only">Open main menu</span>
+            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+            </svg>
+        </button>
+        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+            <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-9 rtl:space-x-reverse md:mt-0">
+                <li>
+                    <a href="#" class="block py-6 px-3 rounded text-black font-bold hover:bg-[#A9B388]" aria-current="page">Client-Side JS</a>
+                </li>
+                <li>
+                    <a href="#" class="block py-6 px-3 rounded text-black hover:bg-[#A9B388]">Server-Side JS</a>
+                </li>
+                <li>
+                    <a href="#" class="block py-6 px-3 rounded text-black hover:bg-[#A9B388]">Client-Server JS</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="titulo">
+    <h2 onclick="data()" class="p-2">Listado de Café</h2>
+</div>
+
+<div class="flex justify-center">
+    <table class="w-80 border-collapse border shadow-lg bg-white">
+        <thead>
+        <tr class="bg-[#5F6F52] text-white text-center">
+            <th class="py-3 px-6 border-b border-black-200">Tostadores</th>
+            <th class="py-3 px-6 border-b border-black-200">País de Origen</th>
+            <th class="py-3 px-6 border-b border-black-200">Región de Origen</th>
+            <th class="py-3 px-6 border-b border-black-200">Varietales</th>
+            <th class="py-3 px-6 border-b border-black-200">Proceso</th>
+            <th class="py-3 px-6 border-b border-black-200">Notas de Cata</th>
+            <th class="py-3 px-6 border-b border-black-200">Peso (gr)</th>
+            <th class="py-3 px-6 border-b border-black-200">Precio (USD)</th>
+        </tr>
+        </thead>
+        <tbody id="coffeeListTableBody">
+        </tbody>
+    </table>
+</div>
+
+</body>
+</html>
