Fixed express section

--- a/public/express/index.html
+++ b/public/express/index.html
@@ -37,9 +37,7 @@
     <h2 class="p-2">Listado de Café</h2>
 </div>
 
-<div class="flex justify-center">
-    <a href="http://localhost:3001/datos" class="p-20 rounded text-white bg-[#5F6F52] hover:bg-[#A9B388] duration-700">Obtener datos</a>
-</div>
+<TABLA />
 
 </body>
 </html>
