Minor fix to see if Vercel works

--- a/public/dom/index.html
+++ b/public/dom/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Ejercicio 2 - Client-Side JavaScript</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="clientSideDataProcessing.js"></script>
+    <script src="./clientSideDataProcessing.js"></script>
     <!--<link href="../../style.css" rel="stylesheet" />-->
 </head>
 <body>
