Changed client-server script src

--- a/public/cliente_servidor/index.html
+++ b/public/cliente_servidor/index.html
@@ -11,7 +11,7 @@
         carpeta dom no hace falta?
     -->
 
-    <script src="cliente_servidor/dataProcessing.js"></script>
+    <script src="./dataProcessing.js"></script>
 </head>
 <body>
 <nav class="bg-[#5F6F52]">
