--- a/public/express_assets/index.html
+++ b/public/express_assets/index.html
@@ -8,7 +8,7 @@
 <body>
 <nav class="bg-[#5F6F52]">
     <div class="flex justify-between items-center p-4">
-        <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse p-4">
+        <a href="../index.html" class="flex items-center space-x-3 rtl:space-x-reverse p-4">
             <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">IAW</span>
         </a>
         <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false" onclick="button()">
@@ -20,13 +20,13 @@
         <div class="hidden w-full md:block md:w-auto" id="navbar-default">
             <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-9 rtl:space-x-reverse md:mt-0">
                 <li>
-                    <a href="#" class="block py-6 px-3 rounded text-black hover:bg-[#A9B388]">Client-Side JS</a>
+                    <a href="/dom/" class="block py-6 px-3 rounded text-black hover:bg-[#A9B388]">Client-Side JS</a>
                 </li>
                 <li>
-                    <a href="#" class="block py-6 px-3 rounded text-black hover:bg-[#A9B388] font-bold" aria-current="page">Server-Side JS</a>
+                    <a href="/express/" class="block py-6 px-3 rounded text-black hover:bg-[#A9B388] font-bold" aria-current="page">Server-Side JS</a>
                 </li>
                 <li>
-                    <a href="#" class="block py-6 px-3 rounded text-black hover:bg-[#A9B388]">Client-Server JS</a>
+                    <a href="/cliente_servidor/" class="block py-6 px-3 rounded text-black hover:bg-[#A9B388]">Client-Server JS</a>
                 </li>
             </ul>
         </div>
