Last aesthetic changes.

--- a/public/express_assets/index.html
+++ b/public/express_assets/index.html
@@ -37,7 +37,9 @@
     <h2 class="p-2">Listado de Café</h2>
 </div>
 
-<TABLA />
+<div class="flex justify-center">
+    <TABLA />
+</div>
 
 </body>
 </html>
